--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "eslint": "^7.14.0",
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
-    "sinon": "^9.2.1"
-  },
-  "optionalDependencies": {
+    "sinon": "^9.2.1",
     "standard-version": "^9.0.0"
   },
   "scripts": {
