--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
   "lint-staged": {
     "*.js": [
       "prettier --write",
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   },
   "nyc": {
