feat: lint-stage

--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
       "eslint --fix"
     ],
     "*.md": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "nyc": {
