--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
   "lint-staged": {
     "*.js": [
       "prettier --write",
-      "eslint --fix"
+      "eslint --fix",
+      "git add"
     ],
     "*.md": [
-      "prettier --write"
+      "prettier --write",
+      "git add"
     ]
   },
   "nyc": {
